--- a/style.css
+++ b/style.css
@@ -68,3 +68,25 @@ nav > a:hover {
     color: var(--cor4);
 }
 
+.video-wrap {
+    width: 100%;
+    max-width: 600px;
+    margin: auto;
+  }
+
+.iframe-container{
+    position: relative;
+  overflow: hidden;
+  height: 0;
+  padding-bottom: 56.25%; /* creates a 16:9 aspect ratio */
+ 
+
+  }
+  .iframe-container iframe{
+    position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  }
