--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h2{
 footer {
     text-align: center;
     padding: 3px;
-    background-color: #2c3e50;
+    background-color: rgb(0, 104, 73);
     color: white;
     
   }
@@ -30,8 +30,12 @@ footer {
   header{
     min-height: 150px;
     text-align: center;
-    padding-top: 40px;
+    background-color: rgb(0, 104, 73);
 }
+
+.header-image {
+  background-image: url('logo1.jpg');
+  }
 
 header > h1 {
 
@@ -43,17 +47,18 @@ header > h1 {
 header>p{
   
     font-size: 1.2em;
-
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
     margin-bottom: 30px;
+   
 }
 
 nav{
     padding: 10px;
     text-align: center;
+    background-color: rgb(63, 172, 87);
 }
 
 nav > a {
