--- a/style.css
+++ b/style.css
@@ -104,3 +104,17 @@ nav > a:hover {
   img {
     max-width:100%;
 }
+
+body{
+  background-color: rgba(0, 104, 73,20%);
+
+    background-clip: content-box, padding-box;
+}
+
+.flag-wrap{
+
+  height: 1px;
+  margin: auto;
+  margin-bottom: 0px; 
+  display:inline
+}
