--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Oswald|Roboto');
+
 a{
    color:#333 !important;
 }
-section.video h2{
-  color:#333 !important;
-  font-family: 'Oswald', sans-serif;
-}
-section.video .watch-video{
- font-family: 'Roboto', sans-serif; 
-}
+
 
 iframe{
     margin-right: 10px;
@@ -18,6 +12,8 @@ iframe{
 h2{
     padding-top: -150px;
 }
+
+
 
 footer {
     text-align: center;
@@ -75,7 +71,7 @@ nav > a:hover {
 
 .video-wrap {
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
     margin: auto;
   }
 
@@ -101,12 +97,13 @@ nav > a:hover {
     max-width: 400px;
     margin: auto;
   }
-  img {
+
+  .image-wrap img {
     max-width:100%;
 }
 
 body{
-  background-color: rgba(0, 104, 73,20%);
+
 
     background-clip: content-box, padding-box;
 }
@@ -117,4 +114,64 @@ body{
   margin: auto;
   margin-bottom: 0px; 
   display:inline
+}
+
+/* Three columns side by side */
+.column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+
+/* Display the columns below each other instead of side by side on small screens */
+@media screen and (max-width: 650px) {
+  .column {
+    width: 100%;
+    display: block;
+  }
+}
+
+/* Add some shadows to create a card effect */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+/* Some left and right padding inside the container */
+.container {
+  padding: 0 16px;
+}
+
+/* Clear floats */
+.container::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
