--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ iframe{
 
 h2{
     padding-top: -150px;
+    font-family: 'Love';
+    color: rgb(0, 104, 73);
 }
 
 
@@ -55,6 +57,9 @@ nav{
     padding: 10px;
     text-align: center;
     background-color: rgb(63, 172, 87);
+    font-family: 'Love';
+    color: rgb(0, 104, 73);
+
 }
 
 nav > a {
@@ -65,8 +70,8 @@ nav > a {
 }
 
 nav > a:hover {
-    background-color: var(--cor3);
-    color: var(--cor4);
+    background-color:  rgb(0, 104, 73);
+    color: white;
 }
 
 .video-wrap {
@@ -174,4 +179,22 @@ body{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+@font-face {
+  font-family: 'Love';
+  src: url('fonts/BreeSerif-Regular.ttf') format('truetype');
+  font-weight: bolder;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Chinese';
+  src: url('fonts/NotoSansSC-Bold.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'khmer';
+  src: url('fonts/NotoSerifKhmer_Condensed-Bold.ttf') format('truetype');
 }
