--- a/style.css
+++ b/style.css
@@ -107,9 +107,24 @@ nav > a:hover {
     max-width:100%;
 }
 
+body main{
+  min-width: 300px;
+  max-width: 1000px;
+  margin: auto;
+  
+  margin-bottom: 30px;
+
+  background-color: white;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+
+
+
 body{
-
-
+  background-color: rgba(0, 104, 73, 40%);
     background-clip: content-box, padding-box;
 }
 
